--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "components/Tabs/TabNavigator", "components/Dashboard/Registration/SignUp/SignUpStyle.js"  ]
 }
